--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
     <header>
         <nav>
             <a class="logo">Travelvile</a>
             <ul>
-                
+
                 <li>
                     <a>Home</a>
                 </li>
@@ -27,17 +29,48 @@
                 <li>
                     <a>Contact</a>
                 </li>
-               
+
             </ul>
         </nav>
     </header>
 
     <div class="image-container">
-        <h1>
-            Take Your Dream Vacation
-        </h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-        <a>LEARN MORE</a>
+        <div>
+            <h1>
+                Take Your Dream Vacation
+            </h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            <a>LEARN MORE</a>
+        </div>
+    </div>
+
+    <div class="search">
+        <div>
+         <h1>Search Destinations</h1>
+        </div>
+
+        <div>
+         <input type="text" placeholder="Aruba, Cancun, etc..." />
+        </div> 
+    </div>
+
+    <div class="container">
+    <div>
+        <img  src="icon-location.svg" height="60px" alt="">
+        <label>Pick Where</label>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, veritatis.</p>
+    </div>
+    <div>
+        <img  src="icon-shop.svg" height="60px" alt="">
+        <label>Travel Shop</label>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, voluptates.</p>
+    </div>
+    <div>
+        <img  src="icon-fly.svg" height="60px" alt="">
+        <label>Fly Cheap</label>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, voluptates.</p>
+    </div>
     </div>
 </body>
+
 </html>
