--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Travelville</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body id="home">
     <header>
       <nav>
-        <a class="logo">Travelvile</a>
+        <a class="logo">Travelville</a>
         <ul>
           <li>
             <a href="#home">Home</a>
